# SDPG

./: .gitignore  .pre-commit-config.yaml  MUJOCO_LOG.TXT  README.md  pyproject.toml
agents/: afrl.py  dreamerv3.py  drqv2.py  dva.py  rl_games.py  sdpg.py  teacher_student.py
assets/: ant.xml  hopper.xml  humanoid.xml  walker.xml
assets/allegro_hand/: right_hand.xml
assets/aloha/: aloha.xml  peg.xml  socket.xml  table.xml
assets/g1_description/: g1_23dof_rev_1_0.xml
assets/mujoco/: hopper.xml  walker.xml
assets/peach/: material.mtl
assets/unitree_go2/: go2_genesis.xml  go2_genesis_urdf_aligned.xml  go2_test.xml  scene_genesis.xml  scene_genesis_terrain.xml  scene_genesis_urdf_aligned.xml
assets/unitree_go2/meshes/: converted_calf_0_abb1c5ff.mtl  converted_calf_mirror_1_000000ff.mtl  converted_thigh_0_e5f2f2ff.mtl
cfgs/: config.yaml  replay.yaml  run.yaml
cfgs/agent/: afrl.yaml
cfgs/agent/afrl/: genesis_allegro_hand.yaml  genesis_allegro_hand_vis.yaml  genesis_aloha_insertion.yaml  genesis_aloha_insertion_vis.yaml  genesis_ant.yaml  genesis_ant_vis.yaml  genesis_franka.yaml  genesis_franka_vis.yaml  genesis_g1_hurtle.yaml  genesis_g1_hurtle_vis.yaml  genesis_go2.yaml  genesis_go2_terrain.yaml  genesis_go2_vis.yaml  genesis_hopper.yaml  genesis_hopper_vis.yaml  genesis_humanoid.yaml  genesis_humanoid_vis.yaml  genesis_shadow_hand_vis.yaml  genesis_walker.yaml  genesis_walker_hurtle.yaml  genesis_walker_hurtle_vis.yaml  genesis_walker_vis.yaml
cfgs/agent/dreamerv3/: genesis_ant.yaml  genesis_hopper.yaml  genesis_humanoid.yaml  genesis_walker.yaml
cfgs/agent/drqv2/: genesis_ant.yaml  genesis_hopper.yaml  genesis_humanoid.yaml  genesis_walker.yaml
cfgs/task/: genesis_default.yaml  rewarped.yaml  rewarped_default.yaml
envs/: __init__.py  base_env.py
envs/genesis_env/: README.md  __init__.py  allegro_hand.py  aloha_insertion.py  ant.py  franka.py  g1.py  g1_hurtle.py  genesis_env.py  go2.py  go2_terrain.py  go2_terrain_rsl.py  hopper.py  humanoid.py  shadow_hand.py  test_genesis_env.py  test_terrain.py  walker.py  walker_hurtle.py
envs/mujoco_env/: __init__.py  batch_renderer.py  hopper.py  mjx_sim.py  mujoco_env.py  walker.py
envs/rewarped_env/: README.md  __init__.py  rewarped_env.py  test_rewarped_env.py
go2_hardware/.devcontainer/: devcontainer.json
go2_hardware/docker/: Dockerfile
go2_hardware/high_level_test/: high_level_test.py
go2_hardware/rlgames/: export_checkpoint_onnx.py  go2.onnx  go2.onnx.data  go2_deploy.py  go2_eval.py  utils.py
models/: __init__.py  actor.py  critic.py  encoder.py
scripts/: replay.py  run.py
utils/: common_utils.py  geom_utils.py  model_utils.py  statistic_utils.py  tensor_utils.py  terrain.py  terrain_utils.py
(+90 files in other folders)
